style.css
@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap');

body {
    font-family: "Hanken Grotesk";
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: white;
    margin: auto;
}

.component {
    display: flex;
    flex-direction: row;
    border-radius: 20px;
    box-shadow: 1px 15px 100px hsl(241, 100%, 89%);
}

h1 {
    font-size: 75px;
    margin: 0 auto;
    padding: 0px;
}

h2 {
    font-size: 30px;
    font-weight: 500;
}

h3 {
    font-size: 25px;
    padding: 35px;
    margin: 0px;
    opacity: 60%;
}

p, td {
    font-size: 15px;
    margin: 0 auto;
    margin: 0px auto;
}

#description {
    opacity: 60%;
    padding: 0px 60px 40px;
}

table {
    padding: 0px 35px;
    margin: auto;
    width: 100%;
    font-weight: 600;
    opacity: 80%;
    border-collapse: separate;
    border-spacing: 0px 15px;
}

td {
    border-radius: 8px;
    border-top: 10px;
    padding: 15px;
}

.scores {
    color: hsl(224, 30%, 27%);
    float: right;
    .total {
        opacity: 60%;
    }
}

.result {
    flex: 1;
    max-width: 400px;
    text-align: center;
    color: white;
    background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
    border-radius: 20px;
}

.circle {
    --circleD: 200px;
    display: flex;
    width: var(--circleD);
    height: var(--circleD);
    margin: 0 auto;
    background-image: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
    border-radius: 50%;
    align-items: center;
    justify-content: center;

}

.summary {
    flex: 1;
    max-width: 400px;
}

.reaction {
    background-color: hsla(0, 100%, 67%, 10%);
    color: hsl(0, 100%, 67%);
}

.memory {
    background-color: hsla(39, 100%, 56%, 10%);
    color: hsl(39, 100%, 56%);
}

.verbal {
    background-color: hsla(166, 100%, 37%, 10%);
    color: hsl(166, 100%, 37%);
}

.visual {
    background-color: hsla(234, 85%, 45%, 10%);
    color: hsl(234, 85%, 45%);
}

button {
    font-family: "Hanken Grotesk";
    padding: 0 35px;
    margin: 25px 35px;
    height: 50px;
    width: 80%;
    border: 1px solid white;
    border-radius: 40px;
    color: white;
    font-weight: 500;
    background-color: hsl(224, 30%, 27%);
}

.icon {
    float: left;
    opacity: 70%;
    padding-right: 8px;
}

footer {
    margin-top: auto;
    padding-top: 0px;
    text-align: center;
    opacity: 90%;
    color: hsla(224, 30%, 27%, 0.855);
}

@media only screen and (max-width: 530px) {

    .component {
      flex-direction: column;
      width: 100vw;
      box-shadow: none;
      position: relative;
      top: -25px;
    }

    main {
        margin: 0;
    }


    .result, .summary {
        max-width: 530px;
    }
}

